RESOLVED FIXED64659
DFG JIT does not optimize equal-null comparisons and branches
https://bugs.webkit.org/show_bug.cgi?id=64659
Summary DFG JIT does not optimize equal-null comparisons and branches
Filip Pizlo
Reported 2011-07-16 16:20:13 PDT
The DFG JIT bytecode parser converts equal-null compare/branch opcodes into a tree of JSConstant(null), an equality comparison, and a branch. The backend never special-cases the equal-to-null case, and treats it as a normal equality comparison; this means that equal-null always takes slow path. The DFG JIT backend should have a peephole optimization for this case.
Attachments
the patch (10.07 KB, patch)
2011-07-18 10:29 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-07-18 10:29:42 PDT
Created attachment 101170 [details] the patch
WebKit Review Bot
Comment 2 2011-07-18 14:05:03 PDT
Comment on attachment 101170 [details] the patch Clearing flags on attachment: 101170 Committed r91208: <http://trac.webkit.org/changeset/91208>
WebKit Review Bot
Comment 3 2011-07-18 14:05:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.