Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp
@@ -767,6 +767,16 @@ void SpeculativeJIT::compile(Node& node)
         break;
 
     case CompareEq:
+        if (isNullConstant(node.child1())) {
+            if (nonSpeculativeCompareNull(node, node.child2()))
+                return;
+            break;
+        }
+        if (isNullConstant(node.child2())) {
+            if (nonSpeculativeCompareNull(node, node.child1()))
+                return;
+            break;
+        }
         if (compare(node, JITCompiler::Equal, operationCompareEq))
             return;
         break;
